--- a/src/index.scss
+++ b/src/index.scss
@@ -45,3 +45,7 @@ a{
 @import './components/rightbar/suggestion.scss';
 @import './components/rightbar/rightbar.scss';
 @import './components/navbar/navbar.scss';
+@import './components/notification/notification.scss';
+@import './components/share/share';
+@import './components/updateProfile/updateProfile';
+@import './components/NoImage/noImage';
