--- a/src/components/navbar/_navbar.scss
+++ b/src/components/navbar/_navbar.scss
@@ -100,15 +100,17 @@
         display: flex;
         align-items: center;
         gap: 10px;
-
+        
         @include mobile{
             display: none;
         }
-
+        
         .user-container{
             display: flex;
             align-items: center;
             gap: 10px;
+            position: relative;
+            cursor: pointer;
             img{
                 width: 1.5rem;
                 height: 1.5rem;
