--- a/src/components/post/_post.scss
+++ b/src/components/post/_post.scss
@@ -23,9 +23,16 @@
                     height: 2.5rem;
                     border-radius: 50%;
                 }
+                svg{
+                    width: 2rem;
+                    height: 2rem;
+                    border-radius: 50%;
+                    background-color: lightgray;
+                }
                 .user-info{
                     display: flex;
                     flex-direction: column;
+                    align-items: flex-start;
                     .name{
                         font-weight: 600;
                     }
@@ -34,6 +41,23 @@
                         font-weight: 400;
                         color: gray;
                     }
+                }
+            }
+            .post-menu{
+                position: relative;
+                svg{
+                    cursor: pointer;
+                }
+                .menu{
+                    position: absolute;
+                    padding: 1rem 2rem;
+                    right: 0;
+                    top: 1.5rem;
+                    border-radius: 10px;
+                    background-color: themed('bgSoft');
+                    display: flex;
+                    flex-direction: column;
+                    gap: 12px;
                 }
             }
         }
