--- a/src/components/stories/_stories.scss
+++ b/src/components/stories/_stories.scss
@@ -1,14 +1,55 @@
 .stories{
-    
+
     display: flex;
     justify-content: center;
     gap: 10px;
     height: 250px;
-    padding: 2rem;
+    margin: 2rem 0;
 
     @include mobile{
         height: 50px;
         justify-content: space-between;
+    }
+
+    .empty-story{
+        position: relative;
+        flex: 1;
+        .back-image{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 10px;
+        }                
+        
+        button{
+            position: absolute;
+            bottom: 2.5rem;
+            left: 1rem;
+            width: 2rem;
+            height: 2rem;
+            border-radius: 50%;
+            background-color: blueviolet;
+            border: none;
+            color: white;
+            font-weight: 500;
+            cursor: pointer;
+            font-size: 18px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            @include mobile{
+                width: 1.8rem;
+                height: 1.8rem;
+                top: 0;
+                right: 0;
+                left: 0;
+                bottom: 0;
+                margin: auto;
+                opacity: 0.7;
+            }
+
+        }
     }
    
     .story{
@@ -39,7 +80,7 @@
         button{
             position: absolute;
             bottom: 2.5rem;
-            left: 1px;
+            left: 10px;
             width: 2rem;
             height: 2rem;
             border-radius: 50%;
