--- a/src/pages/profile/_profile.scss
+++ b/src/pages/profile/_profile.scss
@@ -15,14 +15,23 @@
             }
             .images{
                 position: relative;
+                min-height: 180px;
+                border: 1px solid lightgray;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: themed('bg');
+                border-radius: 5px;
+
             .image-cover{
                 width: 100%;
                 max-height: 350px;
+                min-height: 350px;
                 height: 100%;
                 border-radius: 5px;
                 object-fit: cover;
             }
-            .image-profile{
+            .container-profile{
                 position: absolute;
                 top:0;
                 left:0;
@@ -31,13 +40,23 @@
                 width: 10rem;
                 height: 10rem;
                 border-radius: 50%;
-                top: 270px;
+                top: calc(100% - 40px);
+                border: 1px solid lightgray;
+                overflow: hidden;
+                background-color: themed('bg');
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                .image-profile{
+                    width: 100%;
+                    height: 100%;
+                }
             }
             }
             .profile-container{
                 display: flex;
                 flex-direction: column;
-                margin-top: 3rem;
+                margin-top: 5rem;
                 padding: 3rem 1rem;
                 border-radius: 10px;
                 background-color: themed('bg') ;
